# TranSpark

./: .gitignore  README.md  pyproject.toml
tests/: __init__.py
tests/test_e2e/: test_e2e_model.py
tests/test_operations/: test_joins.py
tests/test_utils/: test_composable.py  test_models.py  test_output_models.py
transpark/models/: __init__.py  cache_model.py  composable_model.py  expected_output_model.py  transpark_model.py
transpark/operations/: __init__.py  joins.py
transpark/pipelines/: __init__.py
transpark/utils/: __init__.py  composable.py  decorators.py  interfaces.py  mappings.py  transformation.py
