[project]
name = "transpark"
version = "0.1.0"
description = "Composable and cachable transformation framework for PySpark"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name="Mateusz Wolowicz", email="you@example.com" }
]
requires-python = ">=3.10"  # ✅ now correctly placed here
dependencies = [
  "pyspark==3.5.6",
  "py4j==0.10.9.7"
]

[project.optional-dependencies]
dev = [
  "black==25.1.0",
  "flake8==7.3.0",
  "mypy_extensions==1.1.0",
  "parameterized==0.9.0",
  "Pygments==2.19.2",
  "iniconfig==2.1.0",
  "pathspec==0.12.1",
  "platformdirs==4.3.8",
  "pluggy==1.6.0",
  "pycodestyle==2.14.0",
  "pyflakes==3.4.0",
  "click==8.2.1",
  "colorama==0.4.6"
]
